--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,15 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations -std=gnu++1
 
 # find_package(catkin REQUIRED COMPONENTS qt_build roscpp mavros_msgs geometry_msgs sensor_msgs nav_msgs keyboard cmake_modules)
 find_package(catkin REQUIRED COMPONENTS roscpp mavros_msgs geometry_msgs sensor_msgs nav_msgs keyboard cmake_modules)
-find_package(Qt4 REQUIRED COMPONENTS QtCore QtGui)
+# find_package(Qt4 REQUIRED COMPONENTS QtCore QtGui)
+find_package(Qt5 REQUIRED COMPONENTS Core Gui)
+find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt5PrintSupport REQUIRED)
 find_package(LibXml2 REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system thread timer)
 find_package(Eigen REQUIRED)
 
-include(${QT_USE_FILE})
+# include(${QT_USE_FILE})
 include_directories( include 
 		${catkin_INCLUDE_DIRS} 
 		${LIBXML2_INCLUDE_DIR} 
@@ -34,10 +37,14 @@ file(GLOB_RECURSE QT_MOC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS
 file(GLOB_RECURSE QT_MOC2 RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS 
 	include/qcustomplot.h)
 
-QT4_ADD_RESOURCES(QT_RESOURCES_CPP ${QT_RESOURCES})
-QT4_WRAP_UI(QT_FORMS_HPP ${QT_FORMS})
-QT4_WRAP_CPP(QT_MOC_HPP ${QT_MOC})
-QT4_WRAP_CPP(QT_MOC_H ${QT_MOC2})
+# QT4_ADD_RESOURCES(QT_RESOURCES_CPP ${QT_RESOURCES})
+# QT4_WRAP_UI(QT_FORMS_HPP ${QT_FORMS})
+# QT4_WRAP_CPP(QT_MOC_HPP ${QT_MOC})
+# QT4_WRAP_CPP(QT_MOC_H ${QT_MOC2})
+QT5_ADD_RESOURCES(QT_RESOURCES_CPP ${QT_RESOURCES})
+QT5_WRAP_UI(QT_FORMS_HPP ${QT_FORMS})
+QT5_WRAP_CPP(QT_MOC_HPP ${QT_MOC})
+QT5_WRAP_CPP(QT_MOC_H ${QT_MOC2})
 
 
 #file(GLOB_RECURSE QT_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS src/*.cpp)
@@ -50,7 +57,9 @@ file(GLOB_RECURSE QT_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINK
 	src/modules/drawing_module.cpp)
 
 add_executable(px4_gcs ${QT_SOURCES} ${QT_RESOURCES_CPP} ${QT_FORMS_HPP} ${QT_MOC_HPP} ${QT_MOC_H})
-target_link_libraries(px4_gcs ${QT_LIBRARIES} ${catkin_LIBRARIES} ${LIBXML2_LIBRARIES} ${Boost_SYSTEM_LIBRARY_RELEASE} ${Boost_THREAD_LIBRARY_RELEASE} ${Boost_TIMER_RELEASE} ${Eigen_LIBRARIES})
+# target_link_libraries(px4_gcs ${QT_LIBRARIES} ${catkin_LIBRARIES} ${LIBXML2_LIBRARIES} ${Boost_SYSTEM_LIBRARY_RELEASE} ${Boost_THREAD_LIBRARY_RELEASE} ${Boost_TIMER_RELEASE} ${Eigen_LIBRARIES})
+target_link_libraries(px4_gcs Qt5::PrintSupport ${catkin_LIBRARIES} ${LIBXML2_LIBRARIES} ${Boost_SYSTEM_LIBRARY_RELEASE} ${Boost_THREAD_LIBRARY_RELEASE} ${Boost_TIMER_RELEASE} ${Eigen_LIBRARIES})
+qt5_use_modules(px4_gcs Widgets)
 add_dependencies(px4_gcs keyboard_generate_messages_cpp)
 
 add_executable(px4_gcs_keyboard src/main_keyboard.cpp src/keyboard_handler.cpp)
